tests/fixtures/type_err/unknown_field.reconf
type Config = {
  port : Int,
};

let config = {
  port = 8080,
  extra = true,
} : Config;

config
